@@ -1256,6 +1256,7 @@
 	'S_TILL'=>					'Till',
 	'S_TO'=>					'To',
 	'S_OK'=>					'Ok',
+	'S_PROBLEM'=>					'Problem',
 	'S_PROBLEMS'=>					'Problems',
 	'S_PERCENTAGE'=>				'Percentage',
 	'S_SLA'=>					'SLA',
