@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1822] changed in map, elements hosts now always show only count of problems (Aly)
  - [DEV-360] added support of calculated items (Sasha)
  - [ZBX-1821] fixed map problem if icon element is not selected (Aly)
  - [ZBX-1177] returned slide-level refresh rate (Aly)
